--- a/admin/criar-conta.html
+++ b/admin/criar-conta.html
@@ -89,8 +89,11 @@
                                             <i class="fa fa-mobile text-black-50 font-large-1 ml-1"></i>
                                         </div>
                                     </fieldset>
-                                    <h5 class="pt-3">🙂 faltam apenas mais 4 perguntas.</h5>
+                                    <h5 class="pt-3 ready-1" style="display: none;">🙂 faltam apenas mais 4 perguntas.</h5>
                                 </div>
+                            </div>
+                            <div class="progress mb-0" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -108,8 +111,11 @@
                                             <i class="fa fa-building-o text-black-50 font-medium-4 ml-1"></i>
                                         </div>
                                     </fieldset>
-                                    <h5 class="pt-3">😉 legal, agora só mais 3.</h5>
+                                    <h5 class="pt-3 ready-2" style="display: none;">😉 legal, agora só mais 3.</h5>
                                 </div>
+                            </div>
+                            <div class="progress mb-0" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -127,8 +133,11 @@
                                             <i class="fa fa-id-card-o text-black-50 font-medium-4 ml-1"></i>
                                         </div>
                                     </fieldset>
-                                    <h5 class="pt-3">🙂 quase lá, só mais 2.</h5>
+                                    <h5 class="pt-3 ready-3" style="display: none;">🙂 quase lá, só mais 2.</h5>
                                 </div>
+                            </div>
+                            <div class="progress mb-0" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -156,8 +165,11 @@
                                             <i class="fa fa-caret-down text-black-50 font-medium-4 ml-1"></i>
                                         </div>
                                     </fieldset>
-                                    <h5 class="pt-3">😃 agora será a última.</h5>
+                                    <h5 class="pt-3 ready-4" style="display: none;">😃 agora será a última.</h5>
                                 </div>
+                            </div>
+                            <div class="progress mb-0" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -178,15 +190,18 @@
                                     <fieldset class="checkboxsas mt-1 text-left col-sm-8 mx-auto mt-2 px-1">
                                         <label><input class="mr-1" type="checkbox" value="">Possuo mais que uma loja.</label>
                                     </fieldset>
-                                    <h5 class="pt-3">🏆 está vendo como foi rápido.</h5>
+                                    <h5 class="pt-3 ready-5" style="display: none;">🏆 está vendo como foi rápido.</h5>
                                 </div>
+                            </div>
+                            <div class="progress mb-0" style="height: 5px;">
+                                <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-6 m-auto">
-                        <button type="button" onclick="nextStep(1)" class="btn-avancar btn btn-primary btn-block shadow text-bold-600 col-sm-3 float-sm-right">próximo</button>
+                        <button type="button" onclick="nextStep(1)" class="btn-avancar btn btn-primary btn-block shadow text-bold-600 col-sm-3 float-sm-right" style="display: none;">próximo</button>
                         <button type="button" onclick="" class="btn-finalizar btn btn-success btn-block shadow text-bold-600 col-sm-3 float-sm-right" style="display: none;">criar minha conta</button>
                     </div>
                 </div>
@@ -226,6 +241,32 @@
     <!-- END: Page JS-->
 
     <script>
+
+        $('.etapa-1 input').keyup( function() {
+            $('.btn-avancar').attr('style', 'display: block;');
+            $('.ready-1').attr('style', 'display: block;');
+        });
+
+        $('.etapa-2 input').keyup( function() {
+            $('.btn-avancar').attr('style', 'display: block;');
+            $('.ready-2').attr('style', 'display: block;');
+        });
+
+        $('.etapa-3 input').keyup( function() {
+            $('.btn-avancar').attr('style', 'display: block;');
+            $('.ready-3').attr('style', 'display: block;');
+        });
+
+        $('.etapa-4 select').change( function() {
+            $('.btn-avancar').attr('style', 'display: block;');
+            $('.ready-4').attr('style', 'display: block;');
+        });
+
+        $('.etapa-5 input').keyup( function() {
+            $('.ready-5').attr('style', 'display: block;');
+        });
+
+
         function nextStep(step) {
             $('.etapa-' + step).hide();
             
@@ -241,6 +282,8 @@
                 $('.btn-avancar').attr('onclick', 'nextStep(' + step + ')');
             }
 
+            $('.btn-avancar').attr('style', 'display: none;');
+            
             console.log(step)
         }
     </script>
