--- a/admin/criar-conta.html
+++ b/admin/criar-conta.html
@@ -72,13 +72,13 @@
                                     <h1 class="h4 text-bold-600">Para começar, preciso que me informe seus dados.</h3>
                                     <p class="text-black-50">Vamos usá-los apenas para criar seu acesso à plataforma <b>tareservado</b>.</p>
                                     <fieldset class="form-group position-relative has-icon-left col-sm-8 mx-auto mt-2 mb-0 px-0">
-                                        <input type="text" class="form-control form-control-lg border border-black-50 pl-4" placeholder="Digite seu nome" style="background-color: #f7f7f7;">
+                                        <input id="nome" type="text" class="form-control form-control-lg border border-black-50 pl-4" placeholder="Digite seu nome" style="background-color: #f7f7f7;">
                                         <div class="form-control-position">
                                             <i class="fa fa-user-o text-black-50 font-medium-4 ml-1"></i>
                                         </div>
                                     </fieldset>
                                     <fieldset class="form-group position-relative has-icon-left col-sm-8 mx-auto mt-2 mb-0 px-0">
-                                        <input type="email" class="form-control form-control-lg border border-black-50 pl-4" placeholder="Digite seu email" style="background-color: #f7f7f7;">
+                                        <input id="email" type="email" class="form-control form-control-lg border border-black-50 pl-4" placeholder="Digite seu email" style="background-color: #f7f7f7;">
                                         <div class="form-control-position">
                                             <i class="fa fa-envelope-o text-black-50 font-medium-4 ml-1"></i>
                                         </div>
@@ -240,7 +240,12 @@
 
     <script>
 
-        $('.etapa-1 input').keyup( function() {
+        $('#nome').change( function () {
+            var nome = $('#nome').val();
+            $('.ready-1').text('🙂 ' + nome + ' faltam apenas mais 4 perguntas.');
+        });
+
+        $('.etapa-1 #email').keyup( function() {
             $('.btn-avancar').attr('style', 'display: block;');
             $('.ready-1').attr('style', 'display: block;');
         });
