Create Site Reserva v1

--- a/admin/index.html
+++ b/admin/index.html
@@ -137,7 +137,7 @@
     <div class="main-menu menu-fixed menu-light menu-accordion shadow pt-1" data-scroll-to-active="true">
         <div class="main-menu-content">
             <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-                <li class="nav-item"><a href="index.html"><i class="fa fa-tachometer"></i><span class="menu-title">Painel Inicial</span></a></li>
+                <li class="nav-item active"><a href="index.html"><i class="fa fa-tachometer"></i><span class="menu-title">Painel Inicial</span></a></li>
                 <li class="nav-item"><a href="calendario.html"><i class="fa fa-calendar"></i><span class="menu-title">Agenda</span></a></li>
                 <li class="nav-item"><a href="#"><i class="fa fa-list-alt"></i><span class="menu-title">Reservas</span></a>
                     <ul class="menu-content">
