Update Visual e Add Agenda 10 dias Painel

--- a/admin/edit-servico.html
+++ b/admin/edit-servico.html
@@ -184,16 +184,16 @@
     <!-- BEGIN: Content-->
     <div class="app-content content">
         <div class="content-overlay"></div>
-        <div class="content-wrapper">
+        <div class="content-wrapper px-3">
             <div class="content-header row">
                 <h1 class="h4 font-weight-bolder pl-1">Editar Serviço</h1>
             </div>
             <div class="content-body">
                 <div class="row">
                     <div class="col-md-12 p-1">
-                        <div class="card border-top-3 border-top-primary mb-0">
+                        <div class="card border-top-3 border-top-primary mb-0 rounded">
                             <div class="card-content">
-                                <div class="card-body p-1">
+                                <div class="card-body">
                                     <label class="h5 font-weight-bolder mb-2">Informações do serviço</label>
                                     <form accept="#">
                                         <div class="form-body">
