--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -10,6 +10,8 @@
     <link rel="apple-touch-icon" href="../app-assets/images/logo/icone.png">
     <link rel="shortcut icon" type="image/x-icon" href="../app-assets/images/logo/icone.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i%7COpen+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/99bf7606df.js" crossorigin="anonymous"></script>
+
 
     <!-- BEGIN: Vendor CSS-->
     <link rel="stylesheet" type="text/css" href="../app-assets/vendors/css/vendors.min.css">
@@ -44,7 +46,7 @@
         <div class="navbar-container main-menu-content container center-layout" data-menu="menu-container">
             <!-- include ../includes/mixins-->
             <ul class="nav navbar-nav" id="main-menu-navigation" data-menu="menu-navigation">
-                <li class="nav-item"><a class="nav-link" href="#"><i class="feather icon-home"></i><span>Home</span></a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="#"><i class="feather icon-home"></i><span>Home</span></a></li> -->
             </ul>
         </div>
         <!-- /horizontal menu content-->
@@ -59,52 +61,51 @@
             </div>
             <section class="content-body">
                 <div class="row">
-                    <div class="col-sm-6">
-                        <h2 class="py-1 text-bold-700">Nome ou Logo da Empresa</h2>
+                    <div class="col-sm-7">
+                        <h2 class="pt-3 pb-2 h4 text-bold-700">Nome ou Logo da Empresa</h2>
                         <p class="">
                             Gummi bears I love oat cake gingerbread donut cotton candy pie biscuit tart. Chocolate cake chocolate cake I love marzipan cookie macaroon. Tart I love I love carrot cake carrot cake chupa chups caramels. Carrot cake pastry cotton candy.
                         </p>
-                        <p class="">
+                        <p class="pb-2">
                             Dessert I love brownie biscuit topping I love chocolate cake gingerbread jelly beans. Chocolate cake cake cheesecake. Chocolate cake pastry macaroon.
                         </p>
+                        <button type="button" class="d-inline btn btn-sm btn-white py-1 rounded font-small-3 shadow-sm"><i class="fas fa-phone-alt mr-c1 blue font-medium-1"></i>(99) 99999-9999</button>
+                        <button type="button" class="d-inline btn btn-sm btn-white py-1 rounded font-small-3 shadow-sm"><i class="fab fa-whatsapp mr-c1 primary font-medium-1 text-bold-600"></i>(99) 99999-9999</button>
+                        <button type="button" class="d-inline btn btn-sm btn-white py-1 rounded font-small-3 shadow-sm"><i class="fas fa-map-marker-alt mr-c1 danger font-medium-1 text-bold-600"></i>ver no mapa</button>                    
+                    </div>
+                    <div class="col-sm-5">
+                        <img class="img-fluid" src="../app-assets/images/elements/salao-beleza.png">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="py-2">Escolha os serviços que deseja fazer uma reserva:</h3>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-content">
-                                <img class="card-img-top img-fluid" src="../app-assets/images/carousel/corte-feminino.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <h4 class="card-title">Corte de Cabelo Feminino</h4>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="#" class="btn btn-outline-pink">Fazer agendamento</a>
+                        <h3 class="py-2 text-bold-600 font-medium-1">Escolha os serviços que deseja fazer a reserva:</h3>
+                        <div class="d-flex flex-row">
+                            <div class="card mx-1">
+                                <div class="card-content">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Corte de Cabelo Feminino</h4>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-outline-pink">Fazer agendamento</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-content">
-                                <img class="card-img-top img-fluid" src="../app-assets/images/carousel/corte-masculino.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <h4 class="card-title">Corte de Cabelo Masculino</h4>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="#" class="btn btn-outline-pink">Fazer agendamento</a>
+                            <div class="card mx-1">
+                                <div class="card-content">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Corte de Cabelo Masculino</h4>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-outline-pink">Fazer agendamento</a>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-content">
-                                <img class="card-img-top img-fluid" src="../app-assets/images/carousel/corte-infantil.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <h4 class="card-title">Corte de Cabelo Infantil</h4>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    <a href="#" class="btn btn-outline-pink">Fazer agendamento</a>
+                            <div class="card mx-1">
+                                <div class="card-content">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Corte de Cabelo Infantil</h4>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <a href="#" class="btn btn-outline-pink">Fazer agendamento</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -133,6 +134,7 @@
 
     <!-- BEGIN: Vendor JS-->
     <script src="../app-assets/vendors/js/vendors.min.js"></script>
+
     <!-- BEGIN Vendor JS-->
 
     <!-- BEGIN: Page Vendor JS-->
