--- a/admin/listar-profissional.html
+++ b/admin/listar-profissional.html
@@ -187,14 +187,14 @@
     <!-- BEGIN: Content-->
     <div class="app-content content">
         <div class="content-overlay"></div>
-        <div class="content-wrapper">
+        <div class="content-wrapper px-3">
             <div class="content-header row">
                 <h1 class="h4 font-weight-bolder pl-1">Gerenciar Profissionais</h1>
             </div>
             <div class="content-body">
                 <div class="row">
                     <div class="col-12 p-1">
-                        <div class="card border-top-3 border-top-primary mb-0">
+                        <div class="card border-top-3 border-top-primary mb-0 rounded">
                             <div class="card-header">
                                 <label class="h5 font-weight-bolder">Listagem de profissionais</label>
                                 <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
