--- a/site-reserva/index.html
+++ b/site-reserva/index.html
@@ -259,8 +259,9 @@
     <footer class="w-100 bg-dark white">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="py-3"></div>
+                <div class="col-12 text-center py-1">
+                    <img src="/app/app-assets/images/logo/icone.png" style="max-height: 25px;">
+                    <img src="/app/app-assets/images/logo/logo-nome.png" style="max-height: 25px;">
                 </div>                
             </div>
         </div>
